# evse-controller

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONDITIONAL_EVENTS_GUIDE.md  CONTAINER_GUIDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  ChargeFull.py  Dockerfile  QWEN.md  README.md  RemainDormant.py  Scheduler2.py  TESTING_CHECKLIST.md  TODO.md  app.py  compose.yaml  configuration.py  configure.py  docker-compose.yml  flux.py  loadFollower.py  octgo.py  octopus.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  set-wallbox.py  smart_evse_controller.py
.devcontainer/: Dockerfile  devcontainer.json
evse-discovery/: README.md  discover.ps1  discover.sh  pyproject.toml
evse-discovery/evse_discovery/: __init__.py
kotlin-poc/: .gitignore  QUICKSTART.md  README.md  STANDALONE_USAGE.md  TESTING_GUIDE.md  UPDATE_SUMMARY.md  build.gradle.kts  settings.gradle.kts  wbcontrol
legacy-unsupported/: RemainDormant.py  cosy.py  flux.py  scheduler.py
lib/: EvseController.py  EvseInterface.py  Power.py  PowerMonitorInterface.py  Shelly.py  WallboxQuasar.py  config.py  logging_config.py  octopus_api.py  paths.py  powerMonitor.py  shelly.py  wallbox.py
log/: placeholder.txt
poc_optimizer/: API_INTEGRATION_RESULTS.md  DESIGN_DECISIONS.md  PHASE1_COMPLETE.md  README.md  REGION_SUPPORT.md  RESULTS.md  agile_rates.py  dp_optimizer.py  simulator.py  test_scenarios.py
shelly-housing/: shelly-housing-bottom.scad  shelly-housing-bottom.stl  shelly-housing-top.scad  shelly-housing-top.stl
templates/: config.html  index.html  restart.html  schedule.html
tests/: README.md  conftest.py  test_calculate_target_current.py  test_config.py  test_config.yaml  test_config_class.py  test_configure_script.py  test_evse_controller_channel_usage.py  test_evse_controller_freerun.py  test_evse_controller_uncontrolled.py  test_evse_interface.py  test_ioctgo_daily_flag_solution.py  test_ioctgo_daily_flag_tdd.py  test_ioctgo_integration.py  test_ioctgo_ocpp.py  test_ioctgo_oscillation_bug.py  test_ioctgo_oscillation_fix.py  test_ioctgo_tdd_fix.py  test_ioctgo_tdd_problem_demo.py  test_ioctgo_tdd_real.py  test_ioctgo_timestamp_fix.py  test_ocpp_manager.py  test_ocpp_redaction.py  test_octopus_cosy_tariff.py  test_octopus_flux_tariff.py  (+14 more)
(+83 files in other folders)
