[tool.poetry]
name = "evse-controller"
version = "0.1.0"
description = "Controller for EVSE devices (Wallbox and Shelly)"
authors = ["Robyn <robynrox@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "~2.31.0"
pyModbusTCP = "~0.2.0"
wallbox = "~0.8.0"
flask = "~3.0.0"
flask-restx = "~1.3.0"
influxdb-client = "~1.36.0"
questionary = "~2.0.1"
pyyaml = "~6.0.1"
python-dateutil = "~2.8.2"
typing-extensions = ">=4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "~7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
